# fefu-app2/api-docs.json
@@ -493,6 +493,7 @@
                 "tags": [
                     "cart"
                 ],
+                "summary": "Get cart by user or session id",
                 "responses": {
                     "200": {
                         "description": "Successful response",
@@ -569,6 +570,85 @@
                     },
                     "404": {
                         "description": "Not found"
+                    }
+                }
+            }
+        },
+        "\/api\/order\/store": {
+            "post": {
+                "tags": [
+                    "orders"
+                ],
+                "summary": "send new order",
+                "requestBody": {
+                    "description": "Store new order",
+                    "content": {
+                        "application\/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "customer_name": {
+                                        "type": "string"
+                                    },
+                                    "customer_email": {
+                                        "type": "string"
+                                    },
+                                    "delivery_type": {
+                                        "type": "integer",
+                                        "example": "courier OR pickup"
+                                    },
+                                    "payment_method": {
+                                        "type": "integer",
+                                        "example": "cash OR card"
+                                    },
+                                    "delivery_address": {
+                                        "type": "array",
+                                        "items": {
+                                            "type": "object",
+                                            "properties": {
+                                                "city": {
+                                                    "type": "string"
+                                                },
+                                                "street": {
+                                                    "type": "string"
+                                                },
+                                                "house": {
+                                                    "type": "string"
+                                                },
+                                                "apartment": {
+                                                    "type": "integer",
+                                                    "nullable": true
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "description": "Cart is empty"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "content": {
+                            "application\/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "errors": {
+                                            "type": "array",
+                                            "example": [
+                                                "some inputs are required"
+                                            ]
+                                        }
+                                    }
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -745,6 +825,24 @@
     },
     "components": {
         "schemas": {
+            "Address": {
+                "type": "object",
+                "properties": {
+                    "city": {
+                        "type": "string"
+                    },
+                    "street": {
+                        "type": "string"
+                    },
+                    "house": {
+                        "type": "string"
+                    },
+                    "apartment": {
+                        "type": "integer",
+                        "nullable": true
+                    }
+                }
+            },
             "Cart": {
                 "type": "object",
                 "properties": {
@@ -820,6 +918,26 @@
                     "published_at": {
                         "format": "date-time",
                         "type": "string"
+                    }
+                }
+            },
+            "Order": {
+                "type": "object",
+                "properties": {
+                    "customer_name": {
+                        "type": "string"
+                    },
+                    "customer_email": {
+                        "type": "string"
+                    },
+                    "delivery_type": {
+                        "type": "integer"
+                    },
+                    "payment_method": {
+                        "type": "integer"
+                    },
+                    "address": {
+                        "$ref": "#\/components\/schemas\/Address"
                     }
                 }
             },
@@ -954,6 +1072,10 @@
         {
             "name": "cart",
             "description": "Cart"
+        },
+        {
+            "name": "orders",
+            "description": "Orders"
         }
     ]
 }
